--- a/_includes/author-box.html
+++ b/_includes/author-box.html
@@ -10,7 +10,7 @@
         {% endif %}
     </div>
     <div class="col-md-10"> 
-        <a target="_blank" class="text-dark h4" href="{{ author.web }}">About {{ author.display_name }}</a>   <a target="_blank" href="{{ author.twitter }}" class="btn-sm"><i class="fab fa-twitter"></i></a>        
+        <a target="_blank" href="mailto:{{ author.email }}" class="btn-sm"><i class="fas fa-envelope"></i></a>  <a target="_blank" href="{{ author.web }}" class="btn-sm"><i class="fab fa-linkedin"></i></a>   <a target="_blank" href="{{ author.youtube }}" class="btn-sm"><i class="fab fa-youtube"></i></a>    <a target="_blank" href="{{ author.twitter }}" class="btn-sm"><i class="fab fa-twitter"></i></a>        
         <span class="author-description d-block mt-2">{{ author.description }}</span>            
     </div>
 </div>
