--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -474,7 +474,7 @@ img, img:hover {
     margin-top:50px;
     margin-bottom:50px;
     .author-description {
-        font-size:16px;
+        font-size:12px;
     }
     .author-thumb {
         width:70px;
@@ -770,5 +770,14 @@ body.active-side {
         .form-control {
             height:35px;
         }
+    }
+}
+
+.video-container iframe {
+    top:0;
+    left: 0;
+    width: 100%;
+    @media (max-width: 480px) {
+        height : 100%
     }
 }
