--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -781,3 +781,10 @@ body.active-side {
         height : 100%
     }
 }
+
+.img-center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
