--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -783,8 +783,14 @@ body.active-side {
 }
 
 .img-center {
-    display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-  }
+}
+
+
+@media only screen and (max-width: 900px) {
+    .not-on-mobile{
+        display: none;
+    }
+}
